# DiscordRustScraper

./: .gitignore  Cargo.toml  License.txt  README.md
src/: cli.rs  lib.rs  main.rs  scraper.rs
src/discord_api/: get_channel_messages.rs  get_last_message_id_in_channel.rs  mod.rs
src/utils/: message_saver.rs  mod.rs
