[package]
name = "discord_rust_scraper"
version = "1.0.1"
edition = "2021"
authors = ["ehewes, bordomantra"]
license = "MIT"
description = "DiscordRustScraper is a powerful Discord data scraper built in Rust, designed to extract and format channel data for further analysis. It efficiently scrapes message history from specified channels and outputs it in a clean JSON format for easy processing."
readme = "README.md"
homepage = "https://github.com/ehewes/DiscordRustScraper"
repository = "https://github.com/ehewes/DiscordRustScraper"
keywords = ["cli", "discord", "scraper", "discordscraper", "bot"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
color-eyre = "0.6.3"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde-jsonlines = "0.5.0"
serde_json = "1.0.117"
chrono = "0.4.38"
async-recursion = "1.1.1"

[dev-dependencies]
tracing-test = "0.2.4"
