[package]
name = "discord_rust_scraper"
version = "1.0.1"
edition = "2021"
authors = ["ehewes, bordomantra"]
license = "MIT"
description = "DiscordRustScraper is a powerful Discord data scraper built in Rust, designed to extract and format channel data for further analysis. It efficiently scrapes message history from specified channels and outputs it in a clean JSON format for easy processing."
readme = "README.md"
homepage = "https://github.com/ehewes/DiscordRustScraper"
repository = "https://github.com/ehewes/DiscordRustScraper"
keywords = ["cli", "discord", "scraper", "discordscraper", "bot"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
color-eyre = "0.6.3"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.140"
chrono = "0.4.40"
async-recursion = "1.1.1"

[dev-dependencies]
tracing-test = "0.2.5"
