[package]
name = "discord_rust_scraper"
version = "1.0.6"
edition = "2021"
authors = ["ehewes, bordomantra"]
license = "MIT"
description = "DiscordRustScraper is a powerful Discord data scraper built in Rust, designed to extract and format channel data for further analysis. It efficiently scrapes message history from specified channels and outputs it in a clean JSON format for easy processing. Optional features include the ability to scrape data from personal accounts, create backups of messages, and store data in a SQL database for improved performance and organization."
readme = "README.md"
homepage = "https://github.com/ehewes/DiscordRustScraper"
repository = "https://github.com/ehewes/DiscordRustScraper"
keywords = ["cli", "discord", "scraper", "discordscraper", "bot"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
color-eyre = "0.6.3"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.12", features = ["json"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.140"
async-recursion = "1.1.1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tracing-test = "0.2.5"
